Structure almost finished, going now for styling with sass

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./CSS/main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alumnos UNACAR</title>
 </head>
 <body>
-    
+    <header>Header!</header>
+
+    <main>
+        <section>
+            <div class="img-holder">
+                <img id="user" src="https://charal.unacar.mx/fotos/200094.jpg" alt="Foto de alumno de la unacar de frente." height="400" style="max-width: 400px;">
+            </div>
+            <div>
+                <button onclick="prev()">previous</button>
+                <input id="info" type="text", placeholder="200023">
+                <button onclick="next()">next</button>
+            </div>
+        </section>
+    </main>
+
+
+    <footer>Footer!</footer>
+    <script src="./javascript/main.js"></script>
 </body>
 </html>
