--- a/index.html
+++ b/index.html
@@ -7,23 +7,45 @@
     <title>Alumnos UNACAR</title>
 </head>
 <body>
-    <header>Header!</header>
+    <header>
+        <nav>
+            <div><img src="./assets/logo.png" alt=""></div>
+            <a href="www.google.com">UNIVERSIDAD AUTÓNOMA DEL CARMEN</a>
+        </nav>
+    </header>
 
     <main>
         <section>
             <div class="img-holder">
-                <img id="user" src="https://charal.unacar.mx/fotos/200094.jpg" alt="Foto de alumno de la unacar de frente." height="400" style="max-width: 400px;">
+                <img id="user" src="https://charal.unacar.mx/fotos/200098.jpg" alt="Foto de alumno de la unacar de frente." height="400" style="max-width: 400px;">
             </div>
             <div>
-                <button onclick="prev()">previous</button>
-                <input id="info" type="text", placeholder="200023">
+                <button onclick="prev()">prev</button>
+                <input id="info" type="text", placeholder="200099">
                 <button onclick="next()">next</button>
             </div>
+            <br>
+            <button onclick="matricula()">Go!</button>
+
+            <br>
+            <br>
+
+            <div>
+                En esta página puedes ver la foto de la matrícula que desees de todos los estudiantes de la UNACAR, navegando de izquierda a derecha, o introduciendo una matrícula específicamente, para hacer más fácil buscar por generación.
+            </div>
+            <br>
         </section>
+
     </main>
 
 
-    <footer>Footer!</footer>
+    <footer>
+        <nav>
+            <a href="">Twitter</a>
+            <a href="">Github</a>
+            <a href="">Facebook</a>
+        </nav>
+    </footer>
     <script src="./javascript/main.js"></script>
 </body>
 </html>
