--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <br>
 
             <div>
-                En esta página puedes ver la foto de la matrícula que desees de todos los estudiantes de la UNACAR, navegando de izquierda a derecha, o introduciendo una matrícula específicamente, para hacer más fácil buscar por generación.
+                Para encontrar el nombre de la persona, basta, si eres estudiante de la unacar, con ir a la plataforma Teams y buscar su matrícula, que te arrojará no sóll su nombre, sino carera que cursa actualmente.
             </div>
             <br>
         </section>
