update index.html again

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <br>
 
             <div>
-                Para encontrar el nombre de la persona, basta, si eres estudiante de la unacar, con ir a la plataforma Teams y buscar su matrícula, que te arrojará no sóll su nombre, sino carera que cursa actualmente.
+                Para encontrar el nombre de la persona, basta, si eres estudiante de la unacar, con ir a la plataforma Teams y buscar su matrícula, que te arrojará no sólo su nombre, sino carrera que cursa actualmente.
             </div>
             <br>
         </section>
