--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>
             <br>
 
-            <div style="padding=10px">
+            <div style="padding:10px">
                 Para encontrar el nombre de la persona, basta, si eres estudiante de la unacar, con ir a la plataforma Teams y buscar su matrícula, que te arrojará no sólo su nombre, sino carrera que cursa actualmente.
             </div>
             <br>
