--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button onclick="next()">next</button>
             </div>
             <br>
-            <button onclick="matricula()">Go!</button>
+            <button onclick="matricula()">Search!</button>
 
             <br>
             <br>
